--- a/SkycoApi/SkyCoApi/packages.config
+++ b/SkycoApi/SkyCoApi/packages.config
@@ -27,47 +27,50 @@
   <package id="Microsoft.AspNet.WebApi.WebHost.es" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.7" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Authentication.Core" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Authorization" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Authorization.Policy" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Http" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Http.Extensions" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Http.Features" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Authentication.Core" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Authorization" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Authorization.Policy" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Extensions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.JsonPatch" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.1.2" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Mvc.ApiExplorer" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Mvc.Core" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.Core" version="2.1.2" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Mvc.DataAnnotations" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.ResponseCaching.Abstractions" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Routing" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.Formatters.Json" version="2.1.2" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.ResponseCaching.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Routing" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.StaticFiles" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.WebUtilities" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.ApiDescription.Server" version="3.0.0" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyModel" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileProviders.Embedded" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Localization" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Localization.Abstractions" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.ObjectPool" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.ObjectPool" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.WebEncoders" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.5.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="6.5.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.5.0" targetFramework="net472" />
-  <package id="Microsoft.Net.Http.Headers" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Net.Http.Headers" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.OpenApi" version="1.1.4" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net472" />
@@ -89,16 +92,20 @@
   <package id="System.IdentityModel.Tokens.Jwt" version="6.5.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Reflection.TypeExtensions" version="4.5.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net472" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net472" />
   <package id="System.Text.Json" version="4.6.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="Tavis.UriTemplates" version="1.1.1" targetFramework="net472" />
   <package id="Unity" version="4.0.1" targetFramework="net472" />
   <package id="Unity.Abstractions" version="5.11.5" targetFramework="net472" />
   <package id="Unity.Mvc4" version="1.6.0.0" targetFramework="net472" />
   <package id="Unity.WebAPI" version="5.2.3" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net472" />
+  <package id="WebApi.Hal" version="3.1.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
