--- a/SkycoApi/SkyCoApi/packages.config
+++ b/SkycoApi/SkyCoApi/packages.config
@@ -21,7 +21,9 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core.es" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Extensions.Compression.Server" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.MessageHandlers.Compression" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost.es" version="5.2.7" targetFramework="net472" />
@@ -48,7 +50,10 @@
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.StaticFiles" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net472" />
@@ -70,6 +75,7 @@
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.5.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="6.5.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.5.0" targetFramework="net472" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net472" />
   <package id="Microsoft.Net.Http.Headers" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.OpenApi" version="1.1.4" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net472" />
@@ -79,6 +85,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="NLog" version="4.7.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net472" />
   <package id="Swashbuckle.AspNetCore" version="5.3.3" targetFramework="net472" />
@@ -91,6 +98,7 @@
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="6.5.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Net.Http.Extensions.Compression.Client" version="2.0.2" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Reflection.TypeExtensions" version="4.5.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
