--- a/SkycoApi/SkyCoApi/Web.config
+++ b/SkycoApi/SkyCoApi/Web.config
@@ -19,7 +19,7 @@
     <add key="JWT_EXPIRE_MINUTES" value="30" />
     <add key="owin:AutomaticAppStartup" value="false" />
 
-	  <add key="MAIL_PATH" value="E:\Zamy Proyecto\SkycoApi\Resolver\Mailing\Mail.config" />
+	  <add key="MAIL_PATH" value="D:\RepoSkyCo\RepoSkyco\SkycoApi\Resolver\Mailing\Mail.config" />
 	  
   </appSettings>
   <system.web>
