--- a/SkycoApi/BusinessServices/packages.config
+++ b/SkycoApi/BusinessServices/packages.config
@@ -1,4 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="5.2.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="RestSharp" version="105.0.1" targetFramework="net461" />
+  <package id="ServiceStack.Interfaces" version="5.8.0" targetFramework="net461" />
+  <package id="Stripe" version="1.12.0" targetFramework="net461" />
+  <package id="Stripe.Client.Sdk" version="1.0.13" targetFramework="net461" />
+  <package id="Stripe.net" version="37.6.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
