--- a/SkycoApi/SkyCoApi/packages.config
+++ b/SkycoApi/SkyCoApi/packages.config
@@ -51,7 +51,7 @@
   <package id="Microsoft.AspNetCore.StaticFiles" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net472" />
   <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
@@ -87,6 +87,7 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="NLog" version="4.7.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="Stripe.net" version="37.6.0" targetFramework="net472" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net472" />
   <package id="Swashbuckle.AspNetCore" version="5.3.3" targetFramework="net472" />
   <package id="Swashbuckle.AspNetCore.Swagger" version="5.3.3" targetFramework="net472" />
@@ -102,7 +103,7 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Reflection.TypeExtensions" version="4.5.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
-  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net472" />
   <package id="System.Text.Json" version="4.6.0" targetFramework="net472" />
