--- a/SkycoApi/StripeServices/StripeServices.csproj
+++ b/SkycoApi/StripeServices/StripeServices.csproj
@@ -67,12 +67,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Currencies.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StripeGateway.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Resolver\Resolver.csproj">
+      <Project>{0fbe64ba-c24c-4d31-b479-de461176b310}</Project>
+      <Name>Resolver</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
