--- a/SkycoApi/BusinessServices/BusinessServices.csproj
+++ b/SkycoApi/BusinessServices/BusinessServices.csproj
@@ -95,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dependency\DependencyResolver.cs" />
+    <Compile Include="Interfaces\ICardServices.cs" />
     <Compile Include="Interfaces\ICityServices.cs" />
     <Compile Include="Interfaces\ICountryServices.cs" />
     <Compile Include="Interfaces\ILocationServices.cs" />
@@ -106,11 +107,17 @@
     <Compile Include="Interfaces\ISkyco_AddressServices.cs" />
     <Compile Include="Interfaces\ISkyco_PhoneServices.cs" />
     <Compile Include="Interfaces\ISkyco_UsersServices.cs" />
+    <Compile Include="Interfaces\ITokenServices.cs" />
     <Compile Include="OwinSecurity\IOwinSecurityService.cs" />
     <Compile Include="OwinSecurity\OwinSecurityServer.cs" />
+    <Compile Include="Patterns\Factories\FactoryCard.cs" />
+    <Compile Include="Patterns\Factories\FactoryPayment.cs" />
+    <Compile Include="Patterns\Factories\FactoryPayment_Skyco_Account.cs" />
     <Compile Include="Patterns\Factories\FactoryPlan.cs" />
     <Compile Include="Patterns\Factories\FactorySkyco_AccountType.cs" />
     <Compile Include="Patterns\Factories\FactorySkyco_Address.cs" />
+    <Compile Include="Patterns\Factories\FactoryToken.cs" />
+    <Compile Include="Services\CardServices.cs" />
     <Compile Include="Services\CityServices.cs" />
     <Compile Include="Services\CountryServices.cs" />
     <Compile Include="Patterns\Factories\FactoryCity.cs" />
@@ -131,6 +138,8 @@
     <Compile Include="Services\Skyco_PhoneServices.cs" />
     <Compile Include="Services\Skyco_UsersServices.cs" />
     <Compile Include="Services\StripBase.cs" />
+    <Compile Include="Services\TokenServices.cs" />
+    <Compile Include="Stripe\StripeInfo.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
