--- a/SkycoApi/DataModal/DataModal.csproj
+++ b/SkycoApi/DataModal/DataModal.csproj
@@ -58,6 +58,7 @@
     <Compile Include="DataClasses\Countries.cs" />
     <Compile Include="DataClasses\Locations.cs" />
     <Compile Include="DataClasses\Payments.cs" />
+    <Compile Include="DataClasses\Payment_Skyco_Accounts.cs" />
     <Compile Include="DataClasses\Plans.cs" />
     <Compile Include="DataClasses\Provinces.cs" />
     <Compile Include="DataClasses\SkyCoDbContext.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Interface\ICardRepository.cs" />
     <Compile Include="Repositories\Interface\IPaymentRepository.cs" />
+    <Compile Include="Repositories\Interface\IPayment_Skyco_AccountRepository.cs" />
     <Compile Include="Repositories\Interface\IPlanRepository.cs" />
     <Compile Include="Repositories\Interface\ISkyco_AccountRepository.cs" />
     <Compile Include="Repositories\Interface\ICityRepository.cs" />
@@ -89,6 +91,7 @@
     <Compile Include="Repositories\Repository\CountryRepository.cs" />
     <Compile Include="Repositories\Repository\LocationRepository.cs" />
     <Compile Include="Repositories\Repository\PaymentRepository.cs" />
+    <Compile Include="Repositories\Repository\Payment_Skyco_AccountRepository.cs" />
     <Compile Include="Repositories\Repository\PlanRepository.cs" />
     <Compile Include="Repositories\Repository\Skyco_AccountRepository.cs" />
     <Compile Include="Repositories\Repository\ProvinceRepository.cs" />
