--- a/SkycoApi/SkyCoApi/SkyCoApi.csproj
+++ b/SkycoApi/SkyCoApi/SkyCoApi.csproj
@@ -227,8 +227,8 @@
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
-    <Reference Include="Stripe.net, Version=37.6.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Stripe.net.37.6.0\lib\net461\Stripe.net.dll</HintPath>
+    <Reference Include="Stripe.net, Version=37.14.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Stripe.net.37.14.0\lib\net461\Stripe.net.dll</HintPath>
     </Reference>
     <Reference Include="Swashbuckle.AspNetCore.Swagger, Version=5.3.3.0, Culture=neutral, PublicKeyToken=62657d7474907593, processorArchitecture=MSIL">
       <HintPath>..\packages\Swashbuckle.AspNetCore.Swagger.5.3.3\lib\netstandard2.0\Swashbuckle.AspNetCore.Swagger.dll</HintPath>
@@ -457,6 +457,7 @@
     <Compile Include="Controllers\ModelFactory.cs" />
     <Compile Include="Controllers\PaymentsController.cs" />
     <Compile Include="Controllers\PlansController.cs" />
+    <Compile Include="Controllers\StripeCardController.cs" />
     <Compile Include="Controllers\TokenController.cs" />
     <Compile Include="Controllers\Token\TokenGenerator.cs" />
     <Compile Include="Controllers\Token\TokenValidationHandler.cs" />
