--- a/SkycoApi/SkyCoApi/Web.config
+++ b/SkycoApi/SkyCoApi/Web.config
@@ -187,9 +187,9 @@
 
   <connectionStrings>
     <!--PC-->
-    <!--<add name="SkyCoDbContext" connectionString="data source=DESKTOP-SR17E1D\PRADDEV;initial catalog=skyco_db;user id=sa;password=516euge94324590;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="SkyCoDbContext" connectionString="data source=DESKTOP-SR17E1D\PRADDEV;initial catalog=skyco_db;user id=sa;password=516euge94324590;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
  <!--NoteBook-->
-  <add name="SkyCoDbContext" connectionString="data source=FAMILIA-PC\PRADEDEV;initial catalog=skyco_db;user id=sa;password=516euge94324590;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  <!--<add name="SkyCoDbContext" connectionString="data source=FAMILIA-PC\PRADEDEV;initial catalog=skyco_db;user id=sa;password=516euge94324590;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
