--- a/SkycoApi/StripeServices/packages.config
+++ b/SkycoApi/StripeServices/packages.config
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="ServiceStack.Client" version="5.8.0" targetFramework="net472" />
   <package id="ServiceStack.Interfaces" version="5.8.0" targetFramework="net472" />
   <package id="ServiceStack.Text" version="5.8.0" targetFramework="net472" />
+  <package id="Stripe.net" version="37.14.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
 </packages>
