--- a/SkycoApi/BusinessServices/BusinessServices.csproj
+++ b/SkycoApi/BusinessServices/BusinessServices.csproj
@@ -112,6 +112,7 @@
     <Compile Include="OwinSecurity\OwinSecurityServer.cs" />
     <Compile Include="Patterns\Factories\FactoryCard.cs" />
     <Compile Include="Patterns\Factories\FactoryPayment.cs" />
+    <Compile Include="Patterns\Factories\FactoryPaymentIntent.cs" />
     <Compile Include="Patterns\Factories\FactoryPayment_Skyco_Account.cs" />
     <Compile Include="Patterns\Factories\FactoryPlan.cs" />
     <Compile Include="Patterns\Factories\FactorySkyco_AccountType.cs" />
