--- a/SkycoApi/BusinessEntities/BusinessEntities.csproj
+++ b/SkycoApi/BusinessEntities/BusinessEntities.csproj
@@ -64,15 +64,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BE\BaseBE.cs" />
-    <Compile Include="BE\CardBE.cs" />
-    <Compile Include="BE\ChargeStripeCustomerBE.cs" />
     <Compile Include="BE\CityBE.cs" />
     <Compile Include="BE\CountryBE.cs" />
-    <Compile Include="BE\CreateStripeCustomerBE.cs" />
     <Compile Include="BE\LocationBE.cs" />
-    <Compile Include="BE\PaymentBE.cs" />
     <Compile Include="BE\PaymentIntentBE.cs" />
-    <Compile Include="BE\Payment_Skyco_AccountBE.cs" />
+    <Compile Include="BE\StripeSubscribeBE.cs" />
     <Compile Include="BE\PlanBE.cs" />
     <Compile Include="BE\PricePlanBE.cs" />
     <Compile Include="BE\ProvinceBE.cs" />
@@ -81,9 +77,6 @@
     <Compile Include="BE\Skyco_AddressBE.cs" />
     <Compile Include="BE\Skyco_PhoneBE.cs" />
     <Compile Include="BE\Skyco_UserBE.cs" />
-    <Compile Include="BE\StripeCardBE.cs" />
-    <Compile Include="BE\StripeCustomerBE.cs" />
-    <Compile Include="BE\TokenBE.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
