--- a/SkycoApi/SkyCoApi/SkyCoApi.csproj
+++ b/SkycoApi/SkyCoApi/SkyCoApi.csproj
@@ -451,14 +451,11 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseApiController.cs" />
-    <Compile Include="Controllers\CardsController.cs" />
     <Compile Include="Controllers\CountriesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ModelFactory.cs" />
-    <Compile Include="Controllers\PaymentsController.cs" />
     <Compile Include="Controllers\PlansController.cs" />
     <Compile Include="Controllers\StripeCardController.cs" />
-    <Compile Include="Controllers\TokenController.cs" />
     <Compile Include="Controllers\Token\TokenGenerator.cs" />
     <Compile Include="Controllers\Token\TokenValidationHandler.cs" />
     <Compile Include="Controllers\UsersController.cs" />
@@ -483,23 +480,18 @@
     <Compile Include="Infraestructure\Skyco_Address.cs" />
     <Compile Include="Infraestructure\Skyco_Phone.cs" />
     <Compile Include="Infraestructure\Skyco_User.cs" />
-    <Compile Include="Models\DTO\Collections\CardDTOCollectionRepresentation.cs" />
-    <Compile Include="Models\DTO\Collections\PaymentDTOCollectionRepresentation.cs" />
-    <Compile Include="Models\DTO\Collections\Payment_Skyco_AccountDTOCollectionRepresentation.cs" />
+    <Compile Include="Models\DTO\Collections\StripeSubscribeDTOCollectionRepresentation.cs" />
     <Compile Include="Models\DTO\Collections\PlanDTOCollectionRepresentation.cs" />
     <Compile Include="Models\DTO\Collections\Skyco_AccountDTOCollectionRepresentation.cs" />
     <Compile Include="Models\DTO\Collections\Skyco_AddressCollectionRepresentation.cs" />
     <Compile Include="Models\DTO\Collections\Skyco_PhoneCollectionRepresentation.cs" />
     <Compile Include="Models\DTO\Collections\Skyco_UserDTOCollectionRepresentation.cs" />
-    <Compile Include="Models\DTO\Collections\TokenDTOCollectionRepresentation.cs" />
     <Compile Include="Models\DTO\Single\BaseDTO.cs" />
-    <Compile Include="Models\DTO\Single\CardDTO.cs" />
     <Compile Include="Models\DTO\Single\CityDTO.cs" />
     <Compile Include="Models\DTO\Single\CountryDTO.cs" />
     <Compile Include="Models\DTO\Single\CreateRoleBindingModel.cs" />
     <Compile Include="Models\DTO\Single\LocationDTO.cs" />
-    <Compile Include="Models\DTO\Single\PaymentDTO.cs" />
-    <Compile Include="Models\DTO\Single\Payment_Skyco_AccountDTO.cs" />
+    <Compile Include="Models\DTO\Single\StripeSubscribeDTO.cs" />
     <Compile Include="Models\DTO\Single\PlanDTO.cs" />
     <Compile Include="Models\DTO\Single\ProvinceDTO.cs" />
     <Compile Include="Models\DTO\Single\Skyco_AccountDTO.cs" />
@@ -507,14 +499,11 @@
     <Compile Include="Models\DTO\Single\Skyco_AddressDTO.cs" />
     <Compile Include="Models\DTO\Single\Skyco_PhoneDTO.cs" />
     <Compile Include="Models\DTO\Single\Skyco_UserDTO.cs" />
-    <Compile Include="Models\DTO\Single\TokenDTO.cs" />
     <Compile Include="Models\FactoryDTO\FactoryAccountDTO.cs" />
-    <Compile Include="Models\FactoryDTO\FactoryCardDTO.cs" />
     <Compile Include="Models\FactoryDTO\FactoryCityDTO.cs" />
     <Compile Include="Models\FactoryDTO\FactoryCountryDTO.cs" />
     <Compile Include="Models\FactoryDTO\FactoryLocationDTO.cs" />
-    <Compile Include="Models\FactoryDTO\FactoryPaymentDTO.cs" />
-    <Compile Include="Models\FactoryDTO\FactoryPayment_Skyco_AccountDTO.cs" />
+    <Compile Include="Models\FactoryDTO\FactoryStripeSubscribeDTO.cs" />
     <Compile Include="Models\FactoryDTO\FactoryPlanDTO.cs" />
     <Compile Include="Models\FactoryDTO\FactoryProvinceDTO.cs" />
     <Compile Include="Models\FactoryDTO\FactorySkyco_AccountDTO.cs" />
@@ -522,17 +511,13 @@
     <Compile Include="Models\FactoryDTO\FactorySkyco_PhoneDTO.cs" />
     <Compile Include="Models\FactoryDTO\FactorySkyco_UserDTO.cs" />
     <Compile Include="Models\FactoryDTO\FactorySkyco_AddressDTO.cs" />
-    <Compile Include="Models\FactoryDTO\FactoryTokenDTO.cs" />
     <Compile Include="Models\Hypermedia\Template\BaseTemplate.cs" />
-    <Compile Include="Models\Hypermedia\Template\CardTemplate.cs" />
-    <Compile Include="Models\Hypermedia\Template\PaymentTemplate.cs" />
-    <Compile Include="Models\Hypermedia\Template\Payment_Skyco_AccountTemplate.cs" />
+    <Compile Include="Models\Hypermedia\Template\StripeSubscribeTemplate.cs" />
     <Compile Include="Models\Hypermedia\Template\PlanTemplate.cs" />
     <Compile Include="Models\Hypermedia\Template\Skyco_AccountTemplate.cs" />
     <Compile Include="Models\Hypermedia\Template\Skyco_AddressTemplate.cs" />
     <Compile Include="Models\Hypermedia\Template\Skyco_PhoneTemplate.cs" />
     <Compile Include="Models\Hypermedia\Template\Skyco_UserTemplate.cs" />
-    <Compile Include="Models\Hypermedia\Template\TokenTemplate.cs" />
     <Compile Include="Models\Representations\BaseCollectionRepresentation.cs" />
     <Compile Include="Models\Representations\BaseRepresentation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
