--- a/SkycoApi/SkyCoApi/Web.config
+++ b/SkycoApi/SkyCoApi/Web.config
@@ -17,6 +17,7 @@
     <add key="JWT_AUDIENCE_TOKEN" value="https://localhost:44359" />
     <add key="JWT_ISSUER_TOKEN" value="https://localhost:44359" />
     <add key="JWT_EXPIRE_MINUTES" value="30" />
+    <add key="Secret_Key" value="sk_test_pJiL43vnUyaJT9xOyyG80W4s0096SCKG0c" />
     <add key="owin:AutomaticAppStartup" value="false" />
 
 	  <add key="MAIL_PATH" value="D:\RepoSkyCo\RepoSkyco\SkycoApi\Resolver\Mailing\Mail.config" />
