--- a/SkycoApi/DataModal/DataModal.csproj
+++ b/SkycoApi/DataModal/DataModal.csproj
@@ -53,12 +53,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataClasses\Cards.cs" />
     <Compile Include="DataClasses\Cities.cs" />
     <Compile Include="DataClasses\Countries.cs" />
     <Compile Include="DataClasses\Locations.cs" />
-    <Compile Include="DataClasses\Payments.cs" />
-    <Compile Include="DataClasses\Payment_Skyco_Accounts.cs" />
+    <Compile Include="DataClasses\StripeSubscribes.cs" />
     <Compile Include="DataClasses\Plans.cs" />
     <Compile Include="DataClasses\Provinces.cs" />
     <Compile Include="DataClasses\SkyCoDbContext.cs" />
@@ -68,13 +66,10 @@
     <Compile Include="DataClasses\Skyco_Phones.cs" />
     <Compile Include="DataClasses\Skyco_Users.cs" />
     <Compile Include="DataClasses\sysdiagrams.cs" />
-    <Compile Include="DataClasses\Tokens.cs" />
     <Compile Include="GenericRepository\ISkyCoGenericRepository.cs" />
     <Compile Include="GenericRepository\SkyCoGenericRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\Interface\ICardRepository.cs" />
-    <Compile Include="Repositories\Interface\IPaymentRepository.cs" />
-    <Compile Include="Repositories\Interface\IPayment_Skyco_AccountRepository.cs" />
+    <Compile Include="Repositories\Interface\IStripeSubscribeRepository.cs" />
     <Compile Include="Repositories\Interface\IPlanRepository.cs" />
     <Compile Include="Repositories\Interface\ISkyco_AccountRepository.cs" />
     <Compile Include="Repositories\Interface\ICityRepository.cs" />
@@ -85,13 +80,10 @@
     <Compile Include="Repositories\Interface\ISkyco_AddressRepository.cs" />
     <Compile Include="Repositories\Interface\ISkyco_PhoneRepository.cs" />
     <Compile Include="Repositories\Interface\ISkyco_UserRepository.cs" />
-    <Compile Include="Repositories\Interface\ITokenRepository.cs" />
-    <Compile Include="Repositories\Repository\CardRepository.cs" />
     <Compile Include="Repositories\Repository\CityRepository.cs" />
     <Compile Include="Repositories\Repository\CountryRepository.cs" />
     <Compile Include="Repositories\Repository\LocationRepository.cs" />
-    <Compile Include="Repositories\Repository\PaymentRepository.cs" />
-    <Compile Include="Repositories\Repository\Payment_Skyco_AccountRepository.cs" />
+    <Compile Include="Repositories\Repository\StripeSubscribeRepository.cs" />
     <Compile Include="Repositories\Repository\PlanRepository.cs" />
     <Compile Include="Repositories\Repository\Skyco_AccountRepository.cs" />
     <Compile Include="Repositories\Repository\ProvinceRepository.cs" />
@@ -99,7 +91,6 @@
     <Compile Include="Repositories\Repository\Skyco_AddressRepository.cs" />
     <Compile Include="Repositories\Repository\Skyco_PhoneRepository.cs" />
     <Compile Include="Repositories\Repository\Skyco_UserRepository.cs" />
-    <Compile Include="Repositories\Repository\TokenRepository.cs" />
     <Compile Include="UnitOfWork\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
