--- a/SkycoApi/StripeServices/StripeServices.csproj
+++ b/SkycoApi/StripeServices/StripeServices.csproj
@@ -84,7 +84,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Key.cs" />
+    <Compile Include="Model\PlanProduct.cs" />
     <Compile Include="PaymentIntent.cs" />
+    <Compile Include="StripeProduct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StripeCardPayment.cs" />
     <Compile Include="StripeGateway.cs" />
