--- a/SkycoApi/SkyCoApi/SkyCoApi.csproj
+++ b/SkycoApi/SkyCoApi/SkyCoApi.csproj
@@ -457,6 +457,7 @@
     <Compile Include="Controllers\PlansController.cs" />
     <Compile Include="Controllers\StripeCardController.cs" />
     <Compile Include="Controllers\Token\TokenGenerator.cs" />
+    <Compile Include="Controllers\Token\TokenMD.cs" />
     <Compile Include="Controllers\Token\TokenValidationHandler.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
